<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backdround">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context="net.tncode.passwordgenerator.MainActivity">
    <TextView
        android:id="@+id/tv_generated_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/length"
            android:textSize="18sp"
            android:gravity="right" />

        <TextView
            android:id="@+id/tv_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_margin="10dp"/>

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/seekDiscreteSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dsb_indicatorColor="@color/colorPrimaryDark"
            app:dsb_trackColor="@color/colorPrimary"
            app:dsb_progressColor="@color/colorAccent"
            app:dsb_max="16"
            app:dsb_min="8" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_strength_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_strong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/strong" />

        <RadioButton
            android:id="@+id/rb_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/rb_weak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weak" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/generated_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="80dp">

        <Button
            android:id="@+id/btn_copy"
            android:text="@string/copy"
            android:enabled="false"
            android:alpha="0.5"
            android:layout_marginRight="5dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:shadowColor="@color/colorDivider"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5" />

        <Button
            android:id="@+id/btn_generate"
            android:text="@string/generate"
            android:layout_margin="5dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:shadowColor="@color/colorDivider"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5" />

        <Button
            android:id="@+id/btn_share"
            android:text="@string/share"
            android:enabled="false"
            android:alpha="0.5"
            android:layout_marginLeft="5dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:shadowColor="@color/colorDivider"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5" />

    </LinearLayout>
</LinearLayout>
</ScrollView>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        ads:adUnitId="@string/banner_ad_unit_id"
        ads:adSize="BANNER"/>
</RelativeLayout>